---------------------------
  Contributors
---------------------------

Dmitry Baikov
Steven Chamberlain
Thom Johansen
Thibault LeMeur
Pieter Palmers
Tom Szilagyi
Andrzej Szombierski 
Kjetil S.Matheussen
Pieter Palmers
Tim Blechmann
Marc-Olivier Barre

---------------------------
  Jackdmp changes log
---------------------------

2008-03-05 Stephane Letz  <letz@grame.fr>
		
	* libjackdmp.so renamed to libjackservermp.so and same for OSX framework.
	* tw1.c example added (new thread model).
	* Marc-Olivier Barre scons patch (2).

2008-03-02 Stephane Letz  <letz@grame.fr>
		
	* Correct JackSocketClientChannel::ClientClose to use ServerSyncCall instead of ServerAsyncCall.
	* Better documentation in jack.h.
	* Marc-Olivier Barre scons patch.

2008-03-02 Stephane Letz  <letz@grame.fr>
		
	* Correct jack_get_time propotype.

2008-02-25 Stephane Letz  <letz@grame.fr>
		
	* Add TimeCallback in JackDebugClient class.

2008-02-22 Stephane Letz  <letz@grame.fr>
		
	* Correct JACK_port_unregister.

2008-02-21 Stephane Letz  <letz@grame.fr>
		
	* Add port register/unregister notification in JackAlsaDriver.

2008-02-12 Stephane Letz  <letz@grame.fr>
		
	* Fix in JackClient::Error(): when RT thread is failing and calling Shutdown, Shutdown was not desactivating the client correctly. 
	* Notify ports unregistration in JackEngine::ClientCloseAux.
	* Thanks Esben Stien for helping finding these bugs.

2008-02-11 Stephane Letz  <letz@grame.fr>
		
	* Use SetAlias for port naming. Use jackd midi port naming scheme.

2008-02-08 Stephane Letz  <letz@grame.fr>
		
	* More robust external API.

2008-02-07 Stephane Letz  <letz@grame.fr>
		
	* Correct "server_connect": close the communication channel.

2008-02-05 Stephane Letz  <letz@grame.fr>
		
	* Reduce WaitGraphChange wait value.
	* Remove use of assert in JackFifo, JackMachSemaphore, and JackPosixSemaphore: print an error instead.

2008-02-03 Stephane Letz  <letz@grame.fr>

	* Add "Readme" file from package in src folder.