@@ -704,8 +704,10 @@ int JackEngine::PortConnect(int refnum, jack_port_id_t src, jack_port_id_t dst)
     }
 	
 	int res = fGraphManager->Connect(src, dst);
-	if (res == 0) 
+	if (res == 0) {
 		NotifyPortConnect(src, dst, true);
+		NotifyPortConnect(dst, src, true);
+	}
 	return res;
 }
 
@@ -718,6 +720,7 @@ int JackEngine::PortDisconnect(int refnum, const char* src, const char* dst)
 		return -1;
 	} else if (fGraphManager->Disconnect(port_src, port_dst) == 0){
 		NotifyPortConnect(port_src, port_dst, false);
+		NotifyPortConnect(port_dst, port_src, false);
 		return 0;
 	} else {
 		return -1;
@@ -739,10 +742,12 @@ int JackEngine::PortDisconnect(int refnum, jack_port_id_t src, jack_port_id_t ds
 			for (int i = 0; (i < CONNECTION_NUM) && (connections[i] != EMPTY); i++) {
 				JackLog("NotifyPortConnect src = %ld dst = %ld false\n", src, connections[i]);
 				NotifyPortConnect(src, connections[i], false);
+				NotifyPortConnect(connections[i], src, false);
 			}
 		} else {
 			for (int i = 0; (i < CONNECTION_NUM) && (connections[i] != EMPTY); i++) {
 				JackLog("NotifyPortConnect src = %ld dst = %ld false\n", connections[i], src);
+				NotifyPortConnect(connections[i], src, false);
 				NotifyPortConnect(connections[i], src, false);
 			}
 		}
@@ -753,6 +758,7 @@ int JackEngine::PortDisconnect(int refnum, jack_port_id_t src, jack_port_id_t ds
 	} else if (fGraphManager->Disconnect(src, dst) == 0) {
 		// Notifications
 		NotifyPortConnect(src, dst, false);
+		NotifyPortConnect(dst, src, false);
 		return 0;
     } else {
 		return -1;
